src/objects/Service_Operations_Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted customer</fullName>
                </value>
                <value>
                    <fullName>Coached agent</fullName>
                </value>
                <value>
                    <fullName>Training Dept – feedback</fullName>
                </value>
                <value>
                    <fullName>Confirmed handled correctly</fullName>
                </value>
                <value>
                    <fullName>Product – feedback</fullName>
                </value>
                <value>
                    <fullName>Other – see notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_feedback_about_the_agent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please share any additional feedback about the agent</inlineHelpText>
        <label>Additional feedback about the agent</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Operations Survey Responses</relationshipLabel>
        <relationshipName>Service_Operations_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Escalation</fullName>
                </value>
                <value>
                    <fullName>Call Time Length</fullName>
                </value>
                <value>
                    <fullName>Care / Concern</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Disconnected Call</fullName>
                </value>
                <value>
                    <fullName>Efficiency</fullName>
                </value>
                <value>
                    <fullName>Friendliness</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Knowledge / Training</fullName>
                </value>
                <value>
                    <fullName>Legal / Safety</fullName>
                </value>
                <value>
                    <fullName>Multiple Calls</fullName>
                </value>
                <value>
                    <fullName>No Callback</fullName>
                </value>
                <value>
                    <fullName>Not Resolved</fullName>
                </value>
                <value>
                    <fullName>Policy / Procedure</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Wait Time</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Age_Days__c</fullName>
        <formula>( Closed_Date__c - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Age Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Age_Minutes__c</fullName>
        <formula>( Closed_Date__c  - CreatedDate)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Age Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Age__c</fullName>
        <formula>TEXT(FLOOR(Closed_Date__c  - CreatedDate)) &amp; &quot; days &quot; 
&amp; TEXT( FLOOR( MOD((Closed_Date__c  - CreatedDate) * 24, 24 ) ) ) &amp; &quot; hours &quot; 
&amp; TEXT( ROUND( MOD((Closed_Date__c  - CreatedDate) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Operations Survey Responses</relationshipLabel>
        <relationshipName>Service_Operations_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Service_easy_to_handle_Score__c</fullName>
        <formula>Case(  Customer_Service_easy_to_handle_issue__c 
,&apos;Strongly disagree&apos;, 1 
,&apos;Disagree&apos;, 2 
,&apos;Somewhat disagree&apos;, 3 
,&apos;Neither agree nor disagree&apos;, 4 
,&apos;Somewhat agree&apos;, 5 
,&apos;Agree&apos;, 6
,&apos;Strongly agree&apos;, 7
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Service easy to handle Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Service_easy_to_handle_issue__c</fullName>
        <inlineHelpText>To what extent do you agree or disagree with the following statement?</inlineHelpText>
        <label>Customer Service easy to handle issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Somewhat disagree</fullName>
                </value>
                <value>
                    <fullName>Neither agree nor disagree</fullName>
                </value>
                <value>
                    <fullName>Somewhat agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_likely_to_recommend_customer_service__c</fullName>
        <inlineHelpText>How likely are you to recommend customer service to a friend or colleague based on this experience?</inlineHelpText>
        <label>How likely to recommend customer service</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Set by process builder</inlineHelpText>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Flag__c</fullName>
        <formula>If(  Owner:User.ManagerId    = $User.Id, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_ID__c</fullName>
        <formula>Owner:User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Case__r.Owner:User.Manager.FirstName &amp; &apos; &apos; &amp; Case__r.Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Detractor__c</fullName>
        <formula>IF(How_likely_to_recommend_customer_service__c  &lt;= 6, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Legend__c</fullName>
        <formula>IMAGE(&quot;/resource/NPS_Legend&quot;, &quot;legend&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Legend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Promoter__c</fullName>
        <formula>IF(How_likely_to_recommend_customer_service__c  &gt;= 9, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Promoter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <formula>How_likely_to_recommend_customer_service__c</formula>
        <label>NPS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <formula>IF(NPS_Score__c &lt;= 6, 
IMAGE(&quot;/resource/NPS_detractor&quot;, &quot;red&quot;, 30, 30), 
IF(NPS_Score__c &gt; 6 &amp;&amp; NPS_Score__c &lt;= 8 , 
IMAGE(&quot;/resource/NPS_passive&quot;, &quot;yellow&quot;, 30, 30),
IF( NPS_Score__c  &gt; 8,
IMAGE(&quot;/resource/NPS_promoter&quot;, &quot;green&quot;, 30, 30) 
,&apos;&apos;)))</formula>
        <label>NPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_Flag__c</fullName>
        <formula>OR(
If(Not(IsNull(How_likely_to_recommend_customer_service__c)) &amp;&amp; How_likely_to_recommend_customer_service__c  &lt;= 4 , True, False)
, If(IsPickVal(Was_issue_resolved_with_contact__c, &apos;No&apos;),True, False)
, If(IsPickVal(Customer_Service_easy_to_handle_issue__c, &apos;Strongly disagree&apos;),True, False)
, If(IsPickVal(Customer_Service_easy_to_handle_issue__c, &apos;Disagree&apos;),True, False)
, If(IsPickVal(Customer_Service_easy_to_handle_issue__c, &apos;Somewhat disagree&apos;),True, False)
, If(IsPickVal(Service_Agent_Knowledge__c, &apos;Very dissatisfied&apos;),True, False)
, If(IsPickVal(Service_Agent_Overall_service__c, &apos;Very dissatisfied&apos;),True, False)
, If(IsPickVal(Service_Agent_Professionalism__c, &apos;Very dissatisfied&apos;),True, False)
, If(IsPickVal(Service_Agent_Responsiveness__c, &apos;Very dissatisfied&apos;),True, False)
, If(IsPickVal(Service_Agent_Showed_care_and_concern__c, &apos;Very dissatisfied&apos;),True, False)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Likely to recommend Service score less than 5
Issue was not Resolved
Service was easy to handle issue; Strongly disagree, Disagree, Somewhat disagree
Agent Overall, Knowledge, Professionalism, Responsiveness, Showed care and concern; Very dissatisfied</inlineHelpText>
        <label>Negative Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Positive_Agent_Flag__c</fullName>
        <formula>OR( 
If(IsPickVal(Service_Agent_Knowledge__c, &apos;Very Satisfied&apos;),True, False) 
, If(IsPickVal(Service_Agent_Overall_service__c, &apos;Very Satisfied&apos;),True, False) 
, If(IsPickVal(Service_Agent_Professionalism__c, &apos;Very Satisfied&apos;),True, False) 
, If(IsPickVal(Service_Agent_Responsiveness__c, &apos;Very Satisfied&apos;),True, False) 
, If(IsPickVal(Service_Agent_Showed_care_and_concern__c, &apos;Very Satisfied&apos;),True, False) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Agent Knowledge, Responsiveness, Professionalism, Showed care and concern = &apos;Very Satisfied&apos;. If this is TRUE then a positive chatter post is automatically created for this survey.</inlineHelpText>
        <label>Positive Agent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Positive_Flag__c</fullName>
        <formula>OR(
If(Not(IsNull(How_likely_to_recommend_customer_service__c)) &amp;&amp; How_likely_to_recommend_customer_service__c   &gt;=   9 , True, False)
, If(IsPickVal(Was_issue_resolved_with_contact__c, &apos;Yes&apos;),True, False)
, If(IsPickVal(Customer_Service_easy_to_handle_issue__c, &apos;Agree&apos;),True, False)
, If(IsPickVal(Customer_Service_easy_to_handle_issue__c, &apos;Strongly Agree&apos;),True, False)
, If(IsPickVal(Service_Agent_Knowledge__c, &apos;Very Satisfied&apos;),True, False)
, If(IsPickVal(Service_Agent_Overall_service__c, &apos;Very Satisfied&apos;),True, False)
, If(IsPickVal(Service_Agent_Professionalism__c, &apos;Very Satisfied&apos;),True, False)
, If(IsPickVal(Service_Agent_Responsiveness__c, &apos;Very Satisfied&apos;),True, False)
, If(IsPickVal(Service_Agent_Showed_care_and_concern__c, &apos;Very Satisfied&apos;),True, False)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Likely to recommend Service score greater than 8
Issue was Resolved
Customer Service was easy to handle issue; Agree and Strongly Agree 
Service Agent Overall service, Knowledge, Professionalism, Responsiveness, Showed care and concern; Very Satisfied</inlineHelpText>
        <label>Positive Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power Of 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_online_portal_was_not_used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please describe why you did not use the online portal.</inlineHelpText>
        <label>Reason online portal was not used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Reason__c</fullName>
        <label>Resolution Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Follow up conducted</fullName>
                </value>
                <value>
                    <fullName>No follow up required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Agent_Average_Score__c</fullName>
        <formula>(Service_Agent_Knowledge_Score__c + Service_Agent_Overall_service_Score__c + Service_Agent_Professionalism_Score__c + Service_Agent_Responsiveness_Score__c + Service_Agent_Showed_concern_Score__c)/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Agent - Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Agent_Knowledge_Score__c</fullName>
        <formula>Case( Service_Agent_Knowledge__c 
,&apos;Very dissatisfied&apos;, 1
,&apos;Somewhat dissatisfied&apos;, 2
,&apos;Neither satisfied nor dissatisfied&apos;, 3
,&apos;Somewhat satisfied&apos;, 4
,&apos;Very satisfied&apos;, 5
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Agent - Knowledge Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Agent_Knowledge__c</fullName>
        <inlineHelpText>Please rate your satisfaction with the customer service agent in the following area.</inlineHelpText>
        <label>Service Agent - Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Agent_Overall_service_Score__c</fullName>
        <formula>Case(  Service_Agent_Overall_service__c 
,&apos;Very dissatisfied&apos;, 1 
,&apos;Somewhat dissatisfied&apos;, 2 
,&apos;Neither satisfied nor dissatisfied&apos;, 3 
,&apos;Somewhat satisfied&apos;, 4 
,&apos;Very satisfied&apos;, 5 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Agent - Overall service Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Agent_Overall_service__c</fullName>
        <inlineHelpText>Please rate your satisfaction with the customer service agent in the following area.</inlineHelpText>
        <label>Service Agent - Overall service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Agent_Professionalism_Score__c</fullName>
        <formula>Case(  Service_Agent_Professionalism__c 
,&apos;Very dissatisfied&apos;, 1 
,&apos;Somewhat dissatisfied&apos;, 2 
,&apos;Neither satisfied nor dissatisfied&apos;, 3 
,&apos;Somewhat satisfied&apos;, 4 
,&apos;Very satisfied&apos;, 5 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Agent - Professionalism Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Agent_Professionalism__c</fullName>
        <inlineHelpText>Please rate your satisfaction with the customer service agent in the following area.</inlineHelpText>
        <label>Service Agent - Professionalism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Agent_Responsiveness_Score__c</fullName>
        <formula>Case(  Service_Agent_Responsiveness__c 
,&apos;Very dissatisfied&apos;, 1 
,&apos;Somewhat dissatisfied&apos;, 2 
,&apos;Neither satisfied nor dissatisfied&apos;, 3 
,&apos;Somewhat satisfied&apos;, 4 
,&apos;Very satisfied&apos;, 5 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Agent - Responsiveness Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Agent_Responsiveness__c</fullName>
        <inlineHelpText>Please rate your satisfaction with the customer service agent in the following area.</inlineHelpText>
        <label>Service Agent - Responsiveness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Agent_Showed_care_and_concern__c</fullName>
        <inlineHelpText>Please rate your satisfaction with the customer service agent in the following area.</inlineHelpText>
        <label>Service Agent - Showed care and concern</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Agent_Showed_concern_Score__c</fullName>
        <formula>Case(  Service_Agent_Showed_care_and_concern__c 
,&apos;Very dissatisfied&apos;, 1 
,&apos;Somewhat dissatisfied&apos;, 2 
,&apos;Neither satisfied nor dissatisfied&apos;, 3 
,&apos;Somewhat satisfied&apos;, 4 
,&apos;Very satisfied&apos;, 5 
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Agent - Showed concern Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Age_Days__c</fullName>
        <formula>TEXT( FLOOR( Now()  - CreatedDate ) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (Now() - CreatedDate) * 24, 24 ) ) ) &amp; &quot; hours &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Age Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Age_Hours__c</fullName>
        <formula>(Now() - CreatedDate)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Age Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tried_to_resolve_with_online_portal__c</fullName>
        <inlineHelpText>Did you first try to resolve your issue using the online portal?</inlineHelpText>
        <label>Tried to resolve with online portal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_issue_resolved_with_contact__c</fullName>
        <inlineHelpText>Was your issue resolved with this contact?</inlineHelpText>
        <label>Was issue resolved with contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_recommend_to_a_customer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Followup to How likely are you to recommend customer service to a friend or colleague based on this experience?</inlineHelpText>
        <label>Why recommend to a customer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Service Operations Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>NPS__c</columns>
        <columns>Service_Agent_Average_Score__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>NPS__c</columns>
        <columns>Service_Agent_Average_Score__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,In Process</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>Manager_Survey_Results</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Case__c</columns>
        <columns>Survey_Age_Days__c</columns>
        <columns>NPS_Score__c</columns>
        <columns>Service_Agent_Average_Score__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Resolution_Reason__c</columns>
        <columns>Action_Taken__c</columns>
        <columns>Resolution_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Service_Operations_Survey_Response__c.Email_Transaction_Survey</value>
        </filters>
        <filters>
            <field>Manager_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Negative_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Manager Survey Results</label>
    </listViews>
    <listViews>
        <fullName>My_Survey_Restults</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Case__c</columns>
        <columns>Service_Agent_Average_Score__c</columns>
        <columns>Negative_Flag__c</columns>
        <columns>NPS__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Resolution_Reason__c</columns>
        <columns>Action_Taken__c</columns>
        <columns>Resolution_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Survey Results</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Operations Survey Responses</pluralLabel>
    <recordTypes>
        <fullName>Email_Transaction_Survey</fullName>
        <active>true</active>
        <label>Transaction Survey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>